# fast-p2a

./: .gitignore  .gitmodules  README.md  env.sh
examples/prim32/hardware/: ptoa_wrapper_delta_uncompressed.vhd  ptoa_wrapper_plain_uncompressed.vhd
examples/prim32/software/cpp/: CMakeLists.txt  prim32.cpp
examples/prim64/hardware/: ptoa_wrapper_delta_uncompressed.vhd  ptoa_wrapper_plain_snappy.vhd  ptoa_wrapper_plain_uncompressed.vhd
examples/prim64/software/cpp/: CMakeLists.txt  prim64.cpp
examples/str/hardware/: ptoa_wrapper_delta_length_uncompressed.vhd  ptoa_wrapper_delta_length_uncompressed_lepc1.vhd
examples/str/software/cpp/: CMakeLists.txt  str.cpp
hardware/: test.vhd  test_tb.vhd
hardware/test/: axi_top_tb.vhd
hardware/test/alignment/: DataAligner_gen.py  DataAligner_gen2.py  DataAligner_tb.vhd  HistoryBuffer_tb.vhd  ShifterRecombiner_gen.py  ShifterRecombiner_tb.vhd
hardware/test/encoding/: PlainDecoder_gen.py  PlainDecoder_tb.vhd  ValuesDecoder_tb.vhd  VarIntDecoder_gen.py  VarIntDecoder_tb.vhd
hardware/test/encoding/delta/: AdvanceableFiFo_tb.vhd  BitUnpacker_tb.vhd  BlockHeaderReader_gen.py  BlockHeaderReader_tb.vhd  BlockValuesAligner_tb.vhd  DeltaDecoder_gen.py  DeltaDecoder_tb.vhd  DeltaHeaderReader_tb.vhd  DeltaLengthDecoder_tb.vhd  Delta_tb.vhd  bva_tb_check256.hex1  bva_tb_in128.hex1  bva_tb_in256.hex1  bva_tb_in64.hex1  dd_tb_check.hex1  dd_tb_in.hex1  dld_tb_check_chars.hex1  dld_tb_check_lengths.hex1  dld_tb_in.hex1  dld_tb_in2.hex1  full.hex1  int32array.hex1
hardware/test/ingestion/: Ingester_gen.py  Ingester_tb.vhd  test.hex1  test.srec
hardware/test/thrift/: MetadataInterpreter_tb.vhd  V1MetadataInterpreter_tb.vhd  V2MetadataInterpreter_gen.py  V2MetadataInterpreter_tb.vhd
hardware/vhdl/: ParquetReader.vhd  axi_top.vhd  ptoa_wrapper.vhd
hardware/vhdl/alignment/: Alignment.vhd  DataAligner.vhd  HistoryBuffer.vhd  ShifterRecombiner.vhd
hardware/vhdl/common/: Ptoa.vhd  Ptoa_sim.vhd
hardware/vhdl/compression/snappy/: Snappy.vhd  SnappyDecompressor.vhd
hardware/vhdl/encoding/: DecoderWrapper.vhd  DecompressorWrapper.vhd  Encoding.vhd  PlainDecoder.vhd  PreDecBuffer.vhd  ValBuffer.vhd  ValuesDecoder.vhd  VarIntDecoder.vhd
hardware/vhdl/encoding/delta/: AdvanceableFiFo.vhd  BitUnpacker.vhd  BitUnpackerShifter.vhd  BitUnpackerVec.vhd  BlockHeaderReader.vhd  BlockShiftControl.vhd  BlockValuesAligner.vhd  CharBuffer.vhd  Delta.vhd  DeltaAccumulator.vhd  DeltaAccumulatorFV.vhd  DeltaAccumulatorMD.vhd  DeltaDecoder.vhd  DeltaHeaderReader.vhd  DeltaLengthDecoder.vhd
hardware/vhdl/ingestion/: Ingester.vhd  Ingestion.vhd
hardware/vhdl/ptoa/: ParquetReader.vhd  Ptoa.vhd
hardware/vhdl/thrift/: MetadataInterpreter.vhd  Thrift.vhd  V1MetadataInterpreter.vhd  V2MetadataInterpreter.vhd
profiling/: .gitignore
profiling/cpp-benchmarks/prim/: CMakeLists.txt
profiling/cpp-benchmarks/prim/src/: prim.cpp
profiling/cpp-benchmarks/prim32/: CMakeLists.txt
profiling/cpp-benchmarks/prim32/src/: prim.cpp
profiling/cpp-benchmarks/prim64/src/: prim.cpp
profiling/cpp-benchmarks/ptoa/: LemireBitUnpacking.cpp  LemireBitUnpacking.h  SWParquetReader.cpp  SWParquetReader.h  SWParquetReaderDelta.cpp  ptoa.h
profiling/cpp-benchmarks/str/: CMakeLists.txt
profiling/cpp-benchmarks/str/src/: str.cpp
profiling/parquet-cpp/: CMakeLists.txt  prelim.cc  results.csv
profiling/parquet-mr/: java.gzip.parquet  java.uncompressed.parquet
profiling/parquet-mr-1.10/prelim/: pom.xml
profiling/parquet-mr-1.10/prelim/src/main/java/com/ptoa/app/: Main.java
profiling/parquet-mr-custom/: example_two_column_n_rowgroup.prq
profiling/parquet-mr-custom/prelim/: pom.xml  run.sh
profiling/parquet-mr-custom/prelim/src/main/java/com/ptoa/app/: CustomV2ValuesWriterFactory.java  Main.java
profiling/parquet-mr/prelim/src/main/java/com/ptoa/app/: Main.java
profiling/utils/: timer.cpp  timer.h
software/cpp/: CMakeLists.txt
software/cpp/src/ptoa/: SWParquetReader.h  parquetwriter.cc  parquetwriter.h  ptoa.h
software/cpp/test/: CMakeLists.txt  parquetwriter_test.cc
